# doc2vec_tutorial

./: pyproject.toml
src/models/: doc2Vec.model
src/similarity_calculation_tutorial/: main.py
